fix: Remove width from article inline ads
Fixes a bug where the ads don't fit the space and sometimes are cut off

--- a/src/components/ads/ads.scss
+++ b/src/components/ads/ads.scss
@@ -74,15 +74,11 @@
 }
 
 .adunit--articles-inline iframe {
-  // Target responsive ads
-  width: 100%;
-
   // Target fixed-width ads
   &[width="300"],
   &[width="320"] {
     @media (min-width: $min-360) {
       margin: 24px auto;
-      width: auto;
     }
   }
 }
